--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,12 @@ html {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+h1{
+  font-size: 5.5rem;
+    font-family: 'Fredoka One', cursive;
+    text-align: center;    
+}
+
 .header {
   display: flex;
   flex-direction: row;
